list alignment fix

--- a/themes/docs-developer-hugo-theme/assets/pages/page-post.scss
+++ b/themes/docs-developer-hugo-theme/assets/pages/page-post.scss
@@ -194,7 +194,7 @@
     ol {
       list-style-type: decimal;
       li {
-        margin-left: 10px;
+        margin-left: 1.5rem;
         list-style-type: decimal;
         font-size: 1.25rem;
       }
